; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_tree-cache.c_git_tree_cache_get.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_tree-cache.c_git_tree_cache_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @git_tree_cache_get(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %5, align 8
  store i8* %8, i8** %6, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store i32* null, i32** %3, align 8
  br label %37

12:                                               ; preds = %2
  br label %13

13:                                               ; preds = %12, %34
  %14 = load i8*, i8** %6, align 8
  %15 = call i8* @strchr(i8* %14, i8 signext 47)
  store i8* %15, i8** %7, align 8
  %16 = load i32*, i32** %4, align 8
  %17 = load i8*, i8** %6, align 8
  %18 = load i8*, i8** %7, align 8
  %19 = call i32* @find_child(i32* %16, i8* %17, i8* %18)
  store i32* %19, i32** %4, align 8
  %20 = load i32*, i32** %4, align 8
  %21 = icmp eq i32* %20, null
  br i1 %21, label %22, label %23

22:                                               ; preds = %13
  store i32* null, i32** %3, align 8
  br label %37

23:                                               ; preds = %13
  %24 = load i8*, i8** %7, align 8
  %25 = icmp eq i8* %24, null
  br i1 %25, label %32, label %26

26:                                               ; preds = %23
  %27 = load i8*, i8** %7, align 8
  %28 = load i8, i8* %27, align 1
  %29 = sext i8 %28 to i32
  %30 = add nsw i32 %29, 1
  %31 = icmp eq i32 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %26, %23
  %33 = load i32*, i32** %4, align 8
  store i32* %33, i32** %3, align 8
  br label %37

34:                                               ; preds = %26
  %35 = load i8*, i8** %7, align 8
  %36 = getelementptr inbounds i8, i8* %35, i64 1
  store i8* %36, i8** %6, align 8
  br label %13

37:                                               ; preds = %32, %22, %11
  %38 = load i32*, i32** %3, align 8
  ret i32* %38
}

declare dso_local i8* @strchr(i8*, i8 signext) #1

declare dso_local i32* @find_child(i32*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
